fixed dropdown menu not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -552,8 +552,8 @@ body {
   width: 100%;
   background-color: var(--white);
   padding-inline: 15px;
-  max-height: 0;
-  overflow: hidden;
+  max-height: 90vh !important;
+  overflow: visible;
   visibility: hidden;
   transition: 0.25s var(--cubic-out);
 }
